Program: WIP for the switch to the UserKey model - compiles, but I have not changed the tests yet.

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Decentralised E2E-encrypted chat app on Solarium"
+      content="Decentralised E2E-encrypted chat app on Solana"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-small.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
